samples/_failures_safe/1761327884_298950_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35afc4fb.c: In function ‘main’:
./samples/SAFE/__tmp_35afc4fb.c:175:5: error: expected expression at end of input
  175 |     if (len > 0 && input[len -
      |     ^~
./samples/SAFE/__tmp_35afc4fb.c:175:5: error: expected declaration or statement at end of input
